[gd_scene load_steps=24 format=2]

[ext_resource path="res://ui/icons/pause.png" type="Texture" id=1]
[ext_resource path="res://ui/theme/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/icons/home.png" type="Texture" id=3]
[ext_resource path="res://ui/fonts/JetBrainsMono[wght].ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/icons/right.png" type="Texture" id=5]
[ext_resource path="res://ui/HUD.gd" type="Script" id=6]
[ext_resource path="res://ui/fonts/SourceHanSansCN-Medium.otf" type="DynamicFontData" id=7]
[ext_resource path="res://ui/icons/musicOn.png" type="Texture" id=8]
[ext_resource path="res://ui/icons/leaderboardsComplex.png" type="Texture" id=9]
[ext_resource path="res://ui/icons/musicOff.png" type="Texture" id=10]
[ext_resource path="res://ui/icons/information.png" type="Texture" id=11]
[ext_resource path="res://ui/icons/question.png" type="Texture" id=12]
[ext_resource path="res://ui/icons/import.png" type="Texture" id=13]
[ext_resource path="res://ui/icons/gear.png" type="Texture" id=14]
[ext_resource path="res://ui/Blur.tscn" type="PackedScene" id=15]
[ext_resource path="res://ui/theme/dialog_theme.tres" type="Theme" id=16]
[ext_resource path="res://ui/shaders/blur-y.shader" type="Shader" id=17]
[ext_resource path="res://ui/clickable_url.gd" type="Script" id=18]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 4 )
fallback/0 = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 17 )

[sub_resource type="DynamicFont" id=17]
size = 32
font_data = ExtResource( 4 )
fallback/0 = ExtResource( 7 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 4 )
fallback/0 = ExtResource( 7 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 6 )

[node name="Backgroud" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.64, 0.384, 0.384, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.172549, 0.172549, 0.482353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
pause_mode = 2
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 1 )

[node name="ContinueButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
pause_mode = 2
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
texture_normal = ExtResource( 5 )

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 208.0
margin_right = 1176.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="HomeButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
pause_mode = 2
margin_left = 1180.0
margin_right = 1280.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 1280.0
margin_bottom = 683.0
size_flags_vertical = 3

[node name="Menu" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 495.0
margin_top = 110.0
margin_right = 785.0
margin_bottom = 468.0

[node name="Title" type="Label" parent="VBoxContainer/CenterContainer/Menu"]
margin_right = 290.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 1 )
text = "TITLE"

[node name="PlayButton" type="Button" parent="VBoxContainer/CenterContainer/Menu"]
margin_top = 131.0
margin_right = 290.0
margin_bottom = 204.0
text = "PLAY"
flat = true

[node name="SettingButton" type="Button" parent="VBoxContainer/CenterContainer/Menu"]
margin_top = 208.0
margin_right = 290.0
margin_bottom = 281.0
text = "SETTING"
flat = true

[node name="ExitButton" type="Button" parent="VBoxContainer/CenterContainer/Menu"]
margin_top = 285.0
margin_right = 290.0
margin_bottom = 358.0
text = "EXIT"
flat = true

[node name="Bottom" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 687.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="Version" type="Label" parent="VBoxContainer/Bottom"]
margin_right = 266.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "Version: 0.1.1 beta"

[node name="Control" type="Control" parent="VBoxContainer/Bottom"]
margin_left = 270.0
margin_right = 898.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="Copyright" type="Label" parent="VBoxContainer/Bottom"]
margin_left = 902.0
margin_right = 1280.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "Copyright (c) 2022 Adanelia"

[node name="ChooseMode" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ChooseMode"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ChooseMode/CenterContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
rect_min_size = Vector2( 1080, 520 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="ChooseMode/CenterContainer/HBoxContainer"]
margin_right = 530.0
margin_bottom = 520.0
size_flags_horizontal = 3

[node name="Blur" parent="ChooseMode/CenterContainer/HBoxContainer/PanelContainer" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 530.0
margin_bottom = 520.0

[node name="Mode1" type="Button" parent="ChooseMode/CenterContainer/HBoxContainer/PanelContainer"]
margin_right = 530.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "QUIZ"
flat = true

[node name="PanelContainer2" type="PanelContainer" parent="ChooseMode/CenterContainer/HBoxContainer"]
margin_left = 550.0
margin_right = 1080.0
margin_bottom = 520.0
size_flags_horizontal = 3

[node name="BackBufferCopy" type="BackBufferCopy" parent="ChooseMode/CenterContainer/HBoxContainer/PanelContainer2"]
copy_mode = 2

[node name="Blur2" parent="ChooseMode/CenterContainer/HBoxContainer/PanelContainer2" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 530.0
margin_bottom = 520.0

[node name="Mode2" type="Button" parent="ChooseMode/CenterContainer/HBoxContainer/PanelContainer2"]
margin_right = 530.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ENDLESS"
flat = true

[node name="Settings" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -467.0
margin_top = -256.0
margin_right = 467.0
margin_bottom = 256.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" parent="Settings" instance=ExtResource( 15 )]

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
material = SubResource( 15 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_right = 897.0
margin_bottom = 100.0
alignment = 1

[node name="GearButton" type="TextureButton" parent="Settings/VBoxContainer/HBoxContainer"]
margin_left = 190.0
margin_right = 290.0
margin_bottom = 100.0
texture_normal = ExtResource( 14 )

[node name="MusicButton" type="TextureButton" parent="Settings/VBoxContainer/HBoxContainer"]
margin_left = 294.0
margin_right = 394.0
margin_bottom = 100.0
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )

[node name="LeaderBoardButton" type="TextureButton" parent="Settings/VBoxContainer/HBoxContainer"]
margin_left = 398.0
margin_right = 498.0
margin_bottom = 100.0
texture_normal = ExtResource( 9 )

[node name="InformationButton" type="TextureButton" parent="Settings/VBoxContainer/HBoxContainer"]
margin_left = 502.0
margin_right = 602.0
margin_bottom = 100.0
texture_normal = ExtResource( 11 )

[node name="QuestionButton" type="TextureButton" parent="Settings/VBoxContainer/HBoxContainer"]
margin_left = 606.0
margin_right = 706.0
margin_bottom = 100.0
texture_normal = ExtResource( 12 )

[node name="Volumn" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 104.0
margin_right = 897.0
margin_bottom = 177.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/Volumn"]
margin_right = 446.0
margin_bottom = 73.0
size_flags_horizontal = 3
text = "VOLUMN"

[node name="VolumnSlider" type="HSlider" parent="Settings/VBoxContainer/Volumn"]
margin_left = 450.0
margin_right = 897.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 100.0
ticks_on_borders = true

[node name="Plan" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 181.0
margin_right = 897.0
margin_bottom = 254.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/Plan"]
margin_right = 446.0
margin_bottom = 73.0
size_flags_horizontal = 3
text = "CUSTOMPLAN"

[node name="SpinBox" type="SpinBox" parent="Settings/VBoxContainer/Plan"]
margin_left = 450.0
margin_right = 897.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 500.0
value = 40.0
rounded = true
align = 1

[node name="Dictionary" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 258.0
margin_right = 897.0
margin_bottom = 331.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/Dictionary"]
margin_right = 335.0
margin_bottom = 73.0
size_flags_horizontal = 3
text = "DICTIONARY"

[node name="OptionButton" type="OptionButton" parent="Settings/VBoxContainer/Dictionary"]
margin_left = 339.0
margin_right = 897.0
margin_bottom = 73.0
size_flags_horizontal = 3
text = "DEFAULTDICTIONARY"
items = [ "DEFAULTDICTIONARY", null, false, 0, null ]
selected = 0

[node name="Load" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 335.0
margin_right = 897.0
margin_bottom = 408.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/Load"]
margin_right = 512.0
margin_bottom = 73.0
size_flags_horizontal = 3
text = "CUSTOMDICTIONARY"

[node name="LoadButton" type="Button" parent="Settings/VBoxContainer/Load"]
margin_left = 516.0
margin_right = 897.0
margin_bottom = 73.0
size_flags_horizontal = 3
text = "LOAD"
icon = ExtResource( 13 )
expand_icon = true

[node name="HBoxContainer6" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 412.0
margin_right = 897.0
margin_bottom = 485.0

[node name="SaveButton" type="Button" parent="Settings/VBoxContainer/HBoxContainer6"]
margin_right = 446.0
margin_bottom = 73.0
size_flags_horizontal = 3
text = "SAVE"
flat = true

[node name="CancelButton" type="Button" parent="Settings/VBoxContainer/HBoxContainer6"]
margin_left = 450.0
margin_right = 897.0
margin_bottom = 73.0
size_flags_horizontal = 3
text = "CANCEL"
flat = true

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -454.0
margin_top = -271.0
margin_right = 454.0
margin_bottom = 271.0
theme = ExtResource( 16 )
popup_exclusive = true
window_title = ""
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.txt" )
show_hidden_files = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notice" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -366.0
margin_top = -147.0
margin_right = 366.0
margin_bottom = 147.0
theme = ExtResource( 16 )
popup_exclusive = true
window_title = ""
dialog_text = "自定义词库格式：
1. 文本文档（txt）。
2. 单词和解释用英文逗号（,）分隔，一行一个。
3. 好麻烦不想做了…… :(
4. 所以暂时不能用……"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Information" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -297.0
margin_top = -308.0
margin_right = 297.0
margin_bottom = 308.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="Information"]
position = Vector2( -170, 52 )
copy_mode = 2

[node name="Blur" parent="Information" instance=ExtResource( 15 )]

[node name="VBoxContainer" type="VBoxContainer" parent="Information"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Information/VBoxContainer"]
margin_right = 594.0
margin_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Information" type="RichTextLabel" parent="Information/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 17 )
bbcode_enabled = true
bbcode_text = "
[shake rate=2 level=5][indent]感谢大家的游玩！[/indent]
[indent][url=https://www.taptap.cn/app/231114][color=#0ec8d4]访问Taptap[/color][/url][/indent]
[rainbow freq=0.1 sat=1 val=1][center]这里是Adanelia工作室[/center]
[center]……[/center]
[center]请大家多多支持！[/center]
[center]*\\(^o^)/*[/center]
[/rainbow][/shake]

[right][url=https://adanelia.github.io/privacy_policy/games/word_zh.html]隐私政策[/url] [/right]"
text = "
	感谢大家的游玩！
	访问Taptap
这里是Adanelia工作室
……
请大家多多支持！
*\\(^o^)/*


隐私政策 "
script = ExtResource( 18 )

[node name="LICENSE" type="RichTextLabel" parent="Information/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 16 )
text = "This game uses Godot Engine, available under the following license:

Copyright (c) 2007-2021 Juan Linietsky, Ariel Manzur. Copyright (c) 2014-2021 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.


FreeType
Portions of this software are copyright © 1996-2020 The FreeType Project (www.freetype.org). All rights reserved.


ENet
Copyright (c) 2002-2020 Lee Salzman

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.


MBedTLS
Copyright The Mbed TLS Contributors

Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.


SuperLightning (https://github.com/DeanNevan/Godot-2D-Super-Lightning)
MIT License

Copyright (c) 2021 DeanNevan

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.


JetBrainsMono-2.225
Copyright 2020 The JetBrains Mono Project Authors (https://github.com/JetBrains/JetBrainsMono)

SourceHanSansCN
Copyright 2014-2021 Adobe (http://www.adobe.com/), with Reserved Font
Name 'Source'. Source is a trademark of Adobe in the United States
and/or other countries.

This Font Software is licensed under the SIL Open Font License,
Version 1.1.

This license is copied below, and is also available with a FAQ at:
http://scripts.sil.org/OFL

-----------------------------------------------------------
SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
-----------------------------------------------------------

PREAMBLE
The goals of the Open Font License (OFL) are to stimulate worldwide
development of collaborative font projects, to support the font
creation efforts of academic and linguistic communities, and to
provide a free and open framework in which fonts may be shared and
improved in partnership with others.

The OFL allows the licensed fonts to be used, studied, modified and
redistributed freely as long as they are not sold by themselves. The
fonts, including any derivative works, can be bundled, embedded,
redistributed and/or sold with any software provided that any reserved
names are not used by derivative works. The fonts and derivatives,
however, cannot be released under any other type of license. The
requirement for fonts to remain under this license does not apply to
any document created using the fonts or their derivatives.

DEFINITIONS
\"Font Software\" refers to the set of files released by the Copyright
Holder(s) under this license and clearly marked as such. This may
include source files, build scripts and documentation.

\"Reserved Font Name\" refers to any names specified as such after the
copyright statement(s).

\"Original Version\" refers to the collection of Font Software
components as distributed by the Copyright Holder(s).

\"Modified Version\" refers to any derivative made by adding to,
deleting, or substituting -- in part or in whole -- any of the
components of the Original Version, by changing formats or by porting
the Font Software to a new environment.

\"Author\" refers to any designer, engineer, programmer, technical
writer or other person who contributed to the Font Software.

PERMISSION & CONDITIONS
Permission is hereby granted, free of charge, to any person obtaining
a copy of the Font Software, to use, study, copy, merge, embed,
modify, redistribute, and sell modified and unmodified copies of the
Font Software, subject to the following conditions:

1) Neither the Font Software nor any of its individual components, in
Original or Modified Versions, may be sold by itself.

2) Original or Modified Versions of the Font Software may be bundled,
redistributed and/or sold with any software, provided that each copy
contains the above copyright notice and this license. These can be
included either as stand-alone text files, human-readable headers or
in the appropriate machine-readable metadata fields within text or
binary files as long as those fields can be easily viewed by the user.

3) No Modified Version of the Font Software may use the Reserved Font
Name(s) unless explicit written permission is granted by the
corresponding Copyright Holder. This restriction only applies to the
primary font name as presented to the users.

4) The name(s) of the Copyright Holder(s) or the Author(s) of the Font
Software shall not be used to promote, endorse or advertise any
Modified Version, except to acknowledge the contribution(s) of the
Copyright Holder(s) and the Author(s) or with their explicit written
permission.

5) The Font Software, modified or unmodified, in part or in whole,
must be distributed entirely under this license, and must not be
distributed under any other license. The requirement for fonts to
remain under this license does not apply to any document created using
the Font Software.

TERMINATION
This license becomes null and void if any of the above conditions are
not met.

DISCLAIMER
THE FONT SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO ANY WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT
OF COPYRIGHT, PATENT, TRADEMARK, OR OTHER RIGHT. IN NO EVENT SHALL THE
COPYRIGHT HOLDER BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
INCLUDING ANY GENERAL, SPECIAL, INDIRECT, INCIDENTAL, OR CONSEQUENTIAL
DAMAGES, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
FROM, OUT OF THE USE OR INABILITY TO USE THE FONT SOFTWARE OR FROM
OTHER DEALINGS IN THE FONT SOFTWARE.
"

[node name="HBoxContainer" type="HBoxContainer" parent="Information/VBoxContainer"]
margin_top = 543.0
margin_right = 594.0
margin_bottom = 616.0

[node name="InfoCloseButton" type="Button" parent="Information/VBoxContainer/HBoxContainer"]
margin_right = 594.0
margin_bottom = 73.0
size_flags_horizontal = 3
text = "CLOSE"
flat = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/Menu/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/Menu/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/Menu/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="ChooseMode/CenterContainer/HBoxContainer/PanelContainer/Mode1" to="." method="_on_Mode1_pressed"]
[connection signal="pressed" from="ChooseMode/CenterContainer/HBoxContainer/PanelContainer2/Mode2" to="." method="_on_Mode2_pressed"]
[connection signal="toggled" from="Settings/VBoxContainer/HBoxContainer/MusicButton" to="." method="_on_MusicButton_toggled"]
[connection signal="pressed" from="Settings/VBoxContainer/HBoxContainer/LeaderBoardButton" to="." method="_on_LeaderBoardButton_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/HBoxContainer/InformationButton" to="." method="_on_InformationButton_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/HBoxContainer/QuestionButton" to="." method="_on_QuestionButton_pressed"]
[connection signal="value_changed" from="Settings/VBoxContainer/Volumn/VolumnSlider" to="." method="_on_VolumnSlider_value_changed"]
[connection signal="pressed" from="Settings/VBoxContainer/Load/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/HBoxContainer6/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/HBoxContainer6/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="meta_clicked" from="Information/VBoxContainer/TabContainer/Information" to="Information/VBoxContainer/TabContainer/Information" method="_on_meta_clicked"]
[connection signal="pressed" from="Information/VBoxContainer/HBoxContainer/InfoCloseButton" to="." method="_on_InfoCloseButton_pressed"]
